[package]
name = "minipack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Just for testing of correct endianness handling of serialized data.
# LE used by default for writing and reading. Obviously data serialized with BE will be incompatible with LE readers.
big_endian = ["minifiletree/big_endian"]

[dependencies]
static_assertions = "1.1.*"
seahash = "4.1"
memmap = "0.7.*"
minifiletree = { path = "../minifiletree" }
minifilepath = { path = "../minifilepath" }
minilz4 = { path = "../minilz4" }
miniclosure = { path = "../miniclosure" }
tracing = "0.1.*"

[dev-dependencies]
minifilepath_macro = { path = "../minifilepath_macro" }
tracing-subscriber = "0.3.*"
tracing-chrome = "0.6.*"